# wagtailimagecaptions

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/wagtailimagecaptions/: 0001_initial.py  __init__.py  apps.py  models.py  services.py  signals.py
src/wagtailimagecaptions/migrations/: 0001_initial.py  0002_rename_extendedrendition_captionedrendition.py  0003_captionedimage_byline_and_more.py  0004_auto_20231121_1134.py  0005_auto_20231121_1134.py  0006_alter_captionedimage_options.py  0007_captionedimage_description.py
test_project/: settings.py  urls.py
test_project/blog/: apps.py  models.py
test_project/blog/migrations/: 0001_initial.py
